[Fix] arreglando peticiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ management.endpoints.web.base-path=/manage
 server.servlet.context-path=/api/microservicio-solicitudes-interconsulta
 
 
+# spring.datasource.url=jdbc:mysql://gestion-consultas-pg-db-instance-1.cygv6w0v8ska.us-east-1.rds.amazonaws.com:${PORT:3306}/${DATABASE:gestion_consultas_externas}
+# spring.datasource.username=root
+# spring.datasource.password=Admin060400
+# spring.datasource.show-sql=true
+
 spring.datasource.url=jdbc:mysql://${IP:localhost}:${PORT:3306}/${DATABASE:gestion-consultas-externas}
 spring.datasource.username=root
 spring.datasource.password=${PASSWORD:admin}
