[Fix] arreglando web security de control de peticiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.datasource.password=${PASSWORD:admin}
 spring.datasource.show-sql=true
 
 server.port=9006
+
+#cognito user pool
+aws.cognito.clientId=73aua9q4fqrvmhbm7un3lek45n
+aws.cognito.userPoolId=us-east-1_qVcmnP5HE
+aws.cognito.region=us-east-1
+aws.cognito.connectionTimeout=2000
+aws.cognito.readTimeout=2000
+aws.cognito.identifyPoolUrl=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qVcmnP5HE
+aws.cognito.jwk=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qVcmnP5HE/.well-known/jwks.json
+aws.cognito.issuer=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qVcmnP5HE
